# DepthAnything3

./: .md  export_onnx.py  inference.py  pyproject.toml  requirements.txt  utils.py
src/depth_anything_3/: api.py
src/depth_anything_3/model/: da3.py  dualdpt.py  reference_view_selector.py
src/depth_anything_3/model/dinov2/: vision_transformer.py
src/depth_anything_3/model/dinov2/layers/: rope.py
src/depth_anything_3/utils/: geometry.py
src/depth_anything_3/utils/io/: input_processor.py  output_processor.py
