[project]
name = "depth-anything-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "einops>=0.8.2",
    "evo>=1.36.5",
    "huggingface-hub>=1.23.0",
    "moviepy==1.0.3",
    "numpy>=2.4.4",
    "omegaconf>=2.3.1",
    "onnx>=1.22.0",
    "onnxscript>=0.7.1",
    "opencv-python>=5.0.0.93",
    "plyfile>=1.1.4",
    "pycolmap>=4.1.0",
    "safetensors>=0.8.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "trimesh>=4.12.2",
    "typer>=0.26.8",
    "xformers>=0.0.35",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
